--- a/FrontendFer/Gp/index.html
+++ b/FrontendFer/Gp/index.html
@@ -51,8 +51,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
       
-      <a class="btn-getstarted" href="index.html#about">Iniciar Sesión</a>
-      <a class="btn-getstarted" href="index.html#about">Registrarse</a>
+      <a class="btn-getstarted" href="iniciar-sesion.html">Iniciar Sesión</a>
+      <a class="btn-getstarted" href="registro.html">Registrarse</a>
 
     
     </div>
