Diseno de Facturacion e Inventario

--- a/GymFlow/src/pages/administracion/control_clientes.html
+++ b/GymFlow/src/pages/administracion/control_clientes.html
@@ -485,7 +485,9 @@
 
         <!-- Right side columns -->
         <div class="col-lg-3">
-
+          <div class="d-grid gap-2 my-3">
+            <button class="btn btn-success" type="button">Añadir Nuevo Cliente</button>
+          </div>
           <!-- Website Traffic -->
           <div class="card">
             <div class="filter">
