Arreglo idioma LandingP

--- a/FrontendFer/Gp/index.html
+++ b/FrontendFer/Gp/index.html
@@ -563,8 +563,8 @@ Se parte de la familia y aporta a nuestros logros como el mejor gimnasio de Alaj
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Team</h2>
-        <p>our Team</p>
+        <h2>El equipo</h2>
+        <p>Nuestro Equipo </p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -654,8 +654,8 @@ Se parte de la familia y aporta a nuestros logros como el mejor gimnasio de Alaj
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Contact Us</p>
+        <h2>Contacto</h2>
+        <p>Contáctanos ya</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
