--- a/GymFlow/src/pages/finanzas/formularios-Finanzas/formulario-Cambiar.html
+++ b/GymFlow/src/pages/finanzas/formularios-Finanzas/formulario-Cambiar.html
@@ -354,7 +354,7 @@
                               <input type="date" id="start-date" name="start-date" class="form-control" required>
                           </div>
           
-                          <button type="submit" class="btn btn-primary btn-block mt-3">Cambiar Suscripción</button>
+                          <button type="submit" class="btn btn-warning btn-block mt-3">Cambiar Suscripción</button>
                       </form>
                   </div>
               </div>
