Se agregó las pantallas de mensajes y notificaciones

--- a/GymFlow/public/index.html
+++ b/GymFlow/public/index.html
@@ -87,7 +87,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
             <li class="dropdown-header">
               <span style="color: #EFE902;">You have 4 new notifications</span>
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../src/pages/Notificaciones/notificaciones.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -145,7 +145,7 @@
               <hr class="dropdown-divider">
             </li>
             <li class="dropdown-footer">
-              <a href="#" style="color: #EFE902;">Show all notifications</a>
+              <a href="../src/pages/Notificaciones/notificaciones.html" style="color: #EFE902;">Show all notifications</a>
             </li>
   
           </ul><!-- End Notification Dropdown Items -->
@@ -162,7 +162,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
             <li class="dropdown-header">
               <span style="color: #EFE902;">You have 3 new messages</span>
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../src/pages/Mensajes/mensajes.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
