--- a/GymFlow/src/pages/administracion/tareas.html
+++ b/GymFlow/src/pages/administracion/tareas.html
@@ -69,7 +69,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
             <li class="dropdown-header">
               You have 4 new notifications
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../Notificaciones/notificaciones.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -127,7 +127,7 @@
               <hr class="dropdown-divider">
             </li>
             <li class="dropdown-footer">
-              <a href="#">Show all notifications</a>
+              <a href="../Notificaciones/notificaciones.html">Show all notifications</a>
             </li>
 
           </ul><!-- End Notification Dropdown Items -->
@@ -144,7 +144,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
             <li class="dropdown-header">
               You have 3 new messages
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../Mensajes/mensajes.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -193,7 +193,7 @@
             </li>
 
             <li class="dropdown-footer">
-              <a href="#">Show all messages</a>
+              <a href="../Mensajes/mensajes.html">Show all messages</a>
             </li>
 
           </ul><!-- End Messages Dropdown Items -->
