--- a/GymFlow/src/pages/facturacion/historial_ventas.html
+++ b/GymFlow/src/pages/facturacion/historial_ventas.html
@@ -68,7 +68,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
             <li class="dropdown-header">
               You have 4 new notifications
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../Notificaciones/notificaciones.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -126,7 +126,7 @@
               <hr class="dropdown-divider">
             </li>
             <li class="dropdown-footer">
-              <a href="#">Show all notifications</a>
+              <a href="../Notificaciones/notificaciones.html">Show all notifications</a>
             </li>
 
           </ul><!-- End Notification Dropdown Items -->
@@ -143,7 +143,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
             <li class="dropdown-header">
               You have 3 new messages
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../Mensajes/mensajes.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -192,7 +192,7 @@
             </li>
 
             <li class="dropdown-footer">
-              <a href="#">Show all messages</a>
+              <a href="../Mensajes/mensajes.html">Show all messages</a>
             </li>
 
           </ul><!-- End Messages Dropdown Items -->
