--- a/GymFlow/src/pages/finanzas/planilla_entradas.html
+++ b/GymFlow/src/pages/finanzas/planilla_entradas.html
@@ -66,7 +66,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
             <li class="dropdown-header">
               You have 4 new notifications
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../Notificaciones/notificaciones.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -124,7 +124,7 @@
               <hr class="dropdown-divider">
             </li>
             <li class="dropdown-footer">
-              <a href="#">Show all notifications</a>
+              <a href="../Notificaciones/notificaciones.html">Show all notifications</a>
             </li>
 
           </ul><!-- End Notification Dropdown Items -->
