--- a/GymFlow/src/pages/inventario/administrar_inventario_productos.html
+++ b/GymFlow/src/pages/inventario/administrar_inventario_productos.html
@@ -97,7 +97,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
             <li class="dropdown-header">
               You have 4 new notifications
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../Notificaciones/notificaciones.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -155,7 +155,7 @@
               <hr class="dropdown-divider">
             </li>
             <li class="dropdown-footer">
-              <a href="#">Show all notifications</a>
+              <a href="../Notificaciones/notificaciones.html">Show all notifications</a>
             </li>
 
           </ul><!-- End Notification Dropdown Items -->
@@ -172,7 +172,7 @@
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
             <li class="dropdown-header">
               You have 3 new messages
-              <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
+              <a href="../Mensajes/mensajes.html"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -221,7 +221,7 @@
             </li>
 
             <li class="dropdown-footer">
-              <a href="#">Show all messages</a>
+              <a href="../Mensajes/mensajes.html">Show all messages</a>
             </li>
 
           </ul><!-- End Messages Dropdown Items -->
