CAMBIO DE COLOR A TITULOS

--- a/FrontendFer/Gp/iniciar-sesion.html
+++ b/FrontendFer/Gp/iniciar-sesion.html
@@ -27,8 +27,9 @@
                             <input type="checkbox" id="remember"> Recuérdame
                         </label>
                     </div>
-                    <button type="submit" class="login-btn">Iniciar sesión</button>
+                    <a href="../../GymFlow/public/index.html"><button type="submit" class="login-btn">Iniciar sesión</button></a>
                     <div class="register">
+                        
                         <p>¿No tienes una cuenta? <a href="registro.html">Regístrate</a></p>
                     </div>
                 </form>
