--- a/GymFlow/src/pages/facturacion/facturacion.html
+++ b/GymFlow/src/pages/facturacion/facturacion.html
@@ -296,18 +296,18 @@
     <section class="section dashboard">
       <div class="d-flex flex-column h-100">
         <header class="bg-background border-bottom px-3 py-2 d-flex justify-content-between align-items-center">
-          <h1 class="h4 mb-0">Creador de Facturas</h1>
+          <h1 style="color: #ffffff;"  class="h4 mb-0">Creador de Facturas</h1>
         </header>
         <div class="flex-fill d-flex flex-wrap gap-3 p-3">
           <div class="bg-background rounded shadow p-3 flex-fill">
-            <h2 class="h5 font-weight-bold mb-3">Información del Cliente</h2>
+            <h2 style="color: #ffffff;"  class="h5 font-weight-bold mb-3">Información del Cliente</h2>
             <div class="d-flex justify-content-between mb-3">
-              <label for="customer-select" class="form-label">Seleccionar Cliente</label>
+              <label style="color: #ffffff;"  for="customer-select" class="form-label">Seleccionar Cliente</label>
               <div class="dropdown">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                <button style="color: #ffffff;"  class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                   Seleccionar Cliente
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <ul style="color: #ffffff;"  class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <li><a class="dropdown-item" href="#">Cliente 1</a></li>
                   <li><a class="dropdown-item" href="#">Cliente 2</a></li>
                   <li><a class="dropdown-item" href="#">Cliente 3</a></li>
