--- a/GymFlow/src/pages/inventario/inventario_maquinas.html
+++ b/GymFlow/src/pages/inventario/inventario_maquinas.html
@@ -309,7 +309,7 @@
     <section class="section dashboard">
       <div class="container-fluid h-100 d-flex flex-column">
         <header class="bg-background border-bottom px-3 py-4 d-flex align-items-center justify-content-between">
-            <h1 class="h3 font-weight-bold">Inventario de Máquina y Equipo</h1>
+            <h1 style="color: #ffffff;"  class="h3 font-weight-bold">Inventario de Máquina y Equipo</h1>
             <a class="btn btn-success" href="#" role="button">Agregar Máquina</a>
         </header>
         <main class="flex-grow-1 container mt-4">
