--- a/GymFlow/public/index.html
+++ b/GymFlow/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>GymFlow</title>
+  <title>Muscle Designer Gym</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center" style="color: #EFE902;">
         <img src="../src/assets/img/logoGym.png" alt="">
-        <span class="d-none d-lg-block" style="color: #EFE902;">GymFlow</span>
+        <span class="d-none d-lg-block" style="color: #EFE902;">Muscle Desginer Gym</span>
       </a>
     </div><!-- End Logo -->
   
