--- a/GymFlow/src/pages/administracion/control_clientes.html
+++ b/GymFlow/src/pages/administracion/control_clientes.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>GymFlow</title>
+  <title>Muscle Designer Gym</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,7 +48,10 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="../../../public/index.html" class="logo d-flex align-items-center">
         <img src="../../assets/img/logoGym.png" alt="">
-        <span class="d-none d-lg-block" style="color: #EFE902;">GymFlow</span>
+
+        <link rel="stylesheet" href="styles.css">
+
+        <span class="d-none d-lg-block" style="color: #EFE902;">Muscle Designer Gym</span>
       </a>
       <i style="color: #EFE902;" class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
