--- a/GymFlow/src/pages/reportes/nuevos_reportes.html
+++ b/GymFlow/src/pages/reportes/nuevos_reportes.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>GymFlow - Reportes</title>
+  <title>Muscle Designer Gym - Reportes</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -28,6 +28,8 @@
 
   <!-- Template Main CSS File -->
   <link href="../../assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -38,7 +40,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="../../../public/index.html" class="logo d-flex align-items-center">
         <img src="../../assets/img/logoGym.png" alt="">
-        <span class="d-none d-lg-block" style="color: #EFE902;">GymFlow</span>
+        <span class="d-none d-lg-block" style="color: #EFE902;">Muscle Designer Gym</span>
       </a>
       <i style="color: #EFE902;" class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
