--- a/GymFlow/src/pages/administracion/control_clientes.html
+++ b/GymFlow/src/pages/administracion/control_clientes.html
@@ -264,7 +264,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Sidebar ======= -->
-  <aside style="background-color: #232323;" class="sidebar">
+  <aside style="background-color:  #010000;" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
 
@@ -304,14 +304,14 @@
 
   </aside><!-- End Sidebar--><!-- End Sidebar-->
 
-  <main style="background-color: #d5d5d5;" id="main" class="main">
+  <main style="background-color:  #010000;" id="main" class="main">
 
     <div class="pagetitle">
-      <h1 style="color: #474747;">Control de Clientes</h1>
+      <h1 style="color: #ffffff;">Control de Clientes</h1>
       <nav>
         <ol class="breadcrumb">
-          <li style="color: #474747;" class="breadcrumb-item"><a href="../../../public/index.html">Home</a></li>
-          <li style="color: #474747;" class="breadcrumb-item active">Control de Clientes</li>
+          <li style="color: #EFE902;" class="breadcrumb-item"><a href="../../../public/index.html">Home</a></li>
+          <li style="color: #EFE902;" class="breadcrumb-item active">Control de Clientes</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
@@ -342,7 +342,7 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 style="color: #414141;" class="card-title">Nuestros Clientes</h5>
+                  <h5 style="color:  #010000;" class="card-title">Nuestros Clientes</h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
