--- a/GymFlow/src/pages/administracion/control_empleados.html
+++ b/GymFlow/src/pages/administracion/control_empleados.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>GymFlow</title>
+  <title>Muscle Designer Gym</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -52,7 +52,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="../../../public/index.html" class="logo d-flex align-items-center">
         <img src="../../assets/img/logoGym.png" alt="">
-        <span class="d-none d-lg-block" style="color: #EFE902;">GymFlow</span>
+        <span class="d-none d-lg-block" style="color: #EFE902;">Muscle Designer Gym</span>
       </a>
       <i style="color: #EFE902;" class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -265,20 +265,20 @@
   </header><!-- End Header -->
 
   <!-- ======= Sidebar ======= -->
-  <aside style="background-color: #363636;" class="sidebar">
+  <aside style="background-color: #010000;" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item bg-danger">
-        <a style="color: #363636;" class="nav-link " href="../../../src/pages/administracion/control_clientes.html">
-          <i style="color: #363636;" class="bi bi-grid"></i>
+        <a style="color: #010000;" class="nav-link " href="../../../src/pages/administracion/control_clientes.html">
+          <i style="color:  #010000;" class="bi bi-grid"></i>
           <span>Control de Clientes</span>
         </a>
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item bg-danger">
-        <a style="color: #363636;" class="nav-link " href="../../../src/pages/administracion/control_empleados.html">
-          <i style="color: #363636;" class="bi bi-grid"></i>
+        <a style="color:  #010000;" class="nav-link " href="../../../src/pages/administracion/control_empleados.html">
+          <i style="color:  #010000;" class="bi bi-grid"></i>
           <span>Control de Empleados</span>
         </a>
       </li><!-- End Dashboard Nav -->
@@ -305,14 +305,14 @@
 
   </aside><!-- End Sidebar-->
 
-  <main style="background-color: #d5d5d5;" id="main" class="main">
+  <main style="background-color:  #010000;" id="main" class="main">
 
     <div class="pagetitle">
-      <h1 style="color: #474747;">Control de Empleados</h1>
+      <h1 style="color: #ffffff;">Control de Empleados</h1>
       <nav>
         <ol class="breadcrumb">
-          <li style="color: #474747;" class="breadcrumb-item"><a href="../../../public/index.html">Home</a></li>
-          <li style="color: #474747;" class="breadcrumb-item active">Control de Empleados</li>
+          <li style="color: #EFE902;" class="breadcrumb-item"><a href="../../../public/index.html">Home</a></li>
+          <li style="color: #EFE902;" class="breadcrumb-item active">Control de Empleados</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
@@ -340,7 +340,7 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 style="color: #414141;" class="card-title">Nuestros Empleados</h5>
+                  <h5 style="color:  #010000;" class="card-title">Nuestros Empleados</h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
