--- a/GymFlow/src/pages/Notificaciones/notificaciones.html
+++ b/GymFlow/src/pages/Notificaciones/notificaciones.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>GymFlow</title>
+  <title>Muscle Designer Gym</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="../../../public/index.html" class="logo d-flex align-items-center">
         <img src="../../assets/img/logoGym.png" alt="">
-        <span class="d-none d-lg-block" style="color: #EFE902;">GymFlow</span>
+        <span class="d-none d-lg-block" style="color: #EFE902;">Muscle Designer Gym</span>
       </a>
       <i style="color: #EFE902;" class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -260,7 +260,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Sidebar ======= -->
-  <aside style="background-color: #363636;" class="sidebar">
+  <aside style="background-color: #000000;" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
 
