--- a/GymFlow/src/pages/facturacion/facturacion.html
+++ b/GymFlow/src/pages/facturacion/facturacion.html
@@ -340,7 +340,7 @@
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="payment-method3">
                   <label class="form-check-label" for="payment-method3">
-                    PayPal
+                    Sinpe Móvil
                   </label>
                 </div>
                 <div class="form-check">
