--- a/GymFlow/src/pages/finanzas/ventas_suplementos.html
+++ b/GymFlow/src/pages/finanzas/ventas_suplementos.html
@@ -393,7 +393,7 @@
           </section>
           
           <div class="card-body">
-            <h2>Historial de Ventas</h2>
+            <h2 style="color: #fff;">Historial de Ventas</h2>
             <table class="table table-striped">
                 <thead>
                     <tr>
