--- a/GymFlow/src/pages/finanzas/formularios-Finanzas/formulario-Facturar.html
+++ b/GymFlow/src/pages/finanzas/formularios-Finanzas/formulario-Facturar.html
@@ -295,7 +295,7 @@
       <li  class="nav-item bg-danger">
         <a  style="color: #363636;" class="nav-link " href="../ventas_suplementos.html">
           <i  style="color: #363636;" class="bi bi-grid"></i>
-          <span >Control de Ventas de Batidos y Suplementos</span>
+          <span >Control de Ventas de Suplementos</span>
         </a>
       </li><!-- End Dashboard Nav -->
     </ul>
