--- a/GymFlow/src/pages/finanzas/planilla_gastos.html
+++ b/GymFlow/src/pages/finanzas/planilla_gastos.html
@@ -293,7 +293,7 @@
       <li  class="nav-item bg-danger">
         <a  style="color: #363636;" class="nav-link " href="../../../src/pages/finanzas/ventas_suplementos.html">
           <i  style="color: #363636;" class="bi bi-grid"></i>
-          <span >Control de Ventas de Batidos y Suplementos</span>
+          <span >Control de Ventas de Suplementos</span>
         </a>
       </li><!-- End Dashboard Nav -->
     </ul>
